Fix loading error and fix dark/light button spacing

--- a/options/options.css
+++ b/options/options.css
@@ -267,7 +267,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-right: 12px;
 }
 
 #darkModeToggle:hover {
